[gd_scene load_steps=8 format=3 uid="uid://b4qecf23eusp0"]

[ext_resource type="Script" path="res://scripts/Player/PlayerController.gd" id="1_n2m40"]
[ext_resource type="PackedScene" uid="uid://cfjgwqiy0a2ov" path="res://scenes/rts_ui.tscn" id="2_2aci7"]
[ext_resource type="Script" path="res://scripts/Player/RtsController.gd" id="2_cmyih"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enl1o"]
size = Vector2(25, 541)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhp26"]
size = Vector2(959.5, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvc8a"]
size = Vector2(960, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bcs06"]
size = Vector2(25, 539)

[node name="Player" type="Node2D"]
script = ExtResource("1_n2m40")
metadata/_edit_horizontal_guides_ = []

[node name="RtsUI" parent="." instance=ExtResource("2_2aci7")]

[node name="RtsController" type="Node2D" parent="." node_paths=PackedStringArray("player", "camera")]
script = ExtResource("2_cmyih")
player = NodePath("..")
camera = NodePath("../Camera2D")
camera_margin = null
camera_speed = 400

[node name="ScreenEdgeDetection" type="Node2D" parent="RtsController"]

[node name="Left" type="Area2D" parent="RtsController/ScreenEdgeDetection"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RtsController/ScreenEdgeDetection/Left"]
position = Vector2(12, 270.5)
scale = Vector2(1.00162, 1)
shape = SubResource("RectangleShape2D_enl1o")
debug_color = Color(0.996078, 0.117647, 0.145098, 0.419608)

[node name="Up" type="Area2D" parent="RtsController/ScreenEdgeDetection"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RtsController/ScreenEdgeDetection/Up"]
position = Vector2(479.25, 12)
shape = SubResource("RectangleShape2D_nhp26")
debug_color = Color(0.996078, 0.117647, 0.145098, 0.419608)

[node name="Down" type="Area2D" parent="RtsController/ScreenEdgeDetection"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RtsController/ScreenEdgeDetection/Down"]
position = Vector2(480, 527)
shape = SubResource("RectangleShape2D_nvc8a")
debug_color = Color(0.996078, 0.117647, 0.145098, 0.419608)

[node name="Right" type="Area2D" parent="RtsController/ScreenEdgeDetection"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RtsController/ScreenEdgeDetection/Right"]
position = Vector2(947, 269.5)
shape = SubResource("RectangleShape2D_bcs06")
debug_color = Color(0.996078, 0.117647, 0.145098, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(2, 2)

[connection signal="mouse_entered" from="RtsController/ScreenEdgeDetection/Left" to="RtsController" method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="RtsController/ScreenEdgeDetection/Left" to="RtsController" method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="RtsController/ScreenEdgeDetection/Up" to="RtsController" method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="RtsController/ScreenEdgeDetection/Up" to="RtsController" method="_on_up_mouse_exited"]
[connection signal="mouse_entered" from="RtsController/ScreenEdgeDetection/Down" to="RtsController" method="_on_down_mouse_entered"]
[connection signal="mouse_exited" from="RtsController/ScreenEdgeDetection/Down" to="RtsController" method="_on_down_mouse_exited"]
[connection signal="mouse_entered" from="RtsController/ScreenEdgeDetection/Right" to="RtsController" method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="RtsController/ScreenEdgeDetection/Right" to="RtsController" method="_on_right_mouse_exited"]
